# sticker_for_ton_store

./: main.py  pyproject.toml  send_mail.py
src/: main.py
src/database/: config.py
src/mail/: config.py  router.py  send_mail.py
src/templates/: base.html  index.html
